Bug 113597 - Inserting table in header and saving crashes
Summary: Inserting table in header and saving crashes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, haveBacktrace, regression
: 113607 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-02 12:30 UTC by Buovjaga
Modified: 2017-11-03 10:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash with master (20.82 KB, text/plain)
2017-11-02 12:30 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2017-11-02 12:30:23 UTC
Created attachment 137462 [details]
GDB trace of crash with master

1. Insert a header in Writer
2. Insert a table with 2 columns inside the header
3. Try to save file

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha1+
Build ID: af318eeb4e23694e17b09b902afb98ddf9da9b7b
CPU threads: 8; OS: Linux 4.13; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on November 1st 2017
Comment 1 Xisco Faulí 2017-11-02 13:14:06 UTC
Regression introduced by:

author	Ashod Nakashian <ashod.nakashian@collabora.co.uk>	2017-10-24 12:07:05 (GMT)
committer	Ashod Nakashian <ashnakash@gmail.com>	2017-10-28 13:52:07 (GMT)
commit b480d5e4c03438487b645ae10347c5c22f36bb25 (patch)
tree f2f71844ff7a8d0f66d076e3165d3015c474e642
parent 7a2e7c32d38db02aaa5d78d5e8aaf86cabfde586 (diff)
TSCP: bump the doc classification if lower than paragraph
The document classification should not be lower than
the highest-classificed paragraph. This insures that
the document classification is as high as the highest
classified paragraph upon saving.

Bisected with: bibisect-linux64-6.0

Adding Cc: to Ashod Nakashian
Comment 2 Xisco Faulí 2017-11-02 18:57:15 UTC
*** Bug 113607 has been marked as a duplicate of this bug. ***
Comment 3 Julien Nabet 2017-11-02 22:54:35 UTC
I submitted a patch to review here:
https://gerrit.libreoffice.org/#/c/44240/
Comment 4 Commit Notification 2017-11-03 06:17:03 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=aa5f6764bd29939f6543c0afa02b21319f2c7c6e

tdf#113597: Inserting table in header and saving crashes

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2017-11-03 06:28:32 UTC
Don't hesitate to reopen this tracker if you still reproduce the crash.
Comment 6 Buovjaga 2017-11-03 09:53:48 UTC
(In reply to Julien Nabet from comment #5)
> Don't hesitate to reopen this tracker if you still reproduce the crash.

Verified it doesn't crash anymore! Thanks a lot, I was actually working on my dayjob when I discovered the bug :)
Comment 7 Ashod Nakashian 2017-11-03 10:14:08 UTC
(In reply to Julien Nabet from comment #3)
> I submitted a patch to review here:
> https://gerrit.libreoffice.org/#/c/44240/

Thanks Julien, much appreciated!