tdf#113597: Inserting table in header and saving crashes

test xTextPortionEnumerationAccess before trying to use it
bt:
0x00007fffca9201e6 in SwEditShell::CollectAdvancedClassification (this=this@entry=0x55555790c710) at /home/user/libreoffice/sw/source/core/edit/edfcol.cxx:804
804	        uno::Reference<container::XEnumeration> xTextPortions = xTextPortionEnumerationAccess->createEnumeration();
0  0x00007fffca9201e6 in SwEditShell::CollectAdvancedClassification() (this=this@entry=0x55555790c710) at /home/user/libreoffice/sw/source/core/edit/edfcol.cxx:804
1  0x00007fffca927e8c in SwEditShell::ClassifyDocPerHighestParagraphClass() (this=0x55555790c710) at /home/user/libreoffice/sw/source/core/edit/edfcol.cxx:1722

Regression from b480d5e4c03438487b645ae10347c5c22f36bb25

Change-Id: I255165ca2aa8e701fe011812165b32dd17e4e2ec
Reviewed-on: https://gerrit.libreoffice.org/44240
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>